# dfinity_cdk_test

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/rust_hello_assets/public/: index.js
