[package]
name = "rust_hello"
version = "0.1.0"
authors = ["yanbowen <511838976@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { path = "../cdk-rs/src/ic-cdk", version = "0.2.1" }
ic-cdk-macros = { path = "../cdk-rs/src/ic-cdk-macros", version = "0.2.1" }
